--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vue-learning",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 8080",
     "build": "vite build",
     "serve": "vite preview"
   },
